# gitlablistpy

./: .gitignore  README.md  exe.py  flake.nix  pyproject.toml
gitlablistpy/: main.py  projects.py  wrapper.py
